# bt-data-pipeline

./: .gitignore  README.md  meta-data.json  pyproject.toml
.github/: main.yml
.github/workflows/: main.yml
depbot/: main.py
depbot/jobs/base/: base.py
depbot/jobs/job_format/: __init__.py  job_format.py
depbot/jobs/store/: __init__.py  format.py  store.py
depbot/scraper/: main.py
depbot/scraper/base/: base.py
depbot/scraper/core/: __init__.py  funnyshortjokes.py  hf1.py  hf10.py  hf11.py  hf12.py  hf13.py  hf2.py  hf3.py  hf4.py  hf5.py  hf6.py  hf7.py  hf8.py  hf9.py  laughfactory.py
depbot/scraper/format/: format.py
depbot/scraper/utils/: logger.py
depbot/scripts/: run.bash
scraper/: __init__.py  pyproject.toml  scraper.py
scraper/base/: base.py
scraper/core/: hf1.py  hf10.py  hf11.py  hf12.py  hf13.py  hf2.py  hf3.py  hf4.py  hf5.py  hf6.py  hf7.py  hf8.py  hf9.py  laughfactory.py
scraper/format/: __init__.py
scrapper/: main.py
scrapper/base/: main.py
scrapper/core/: funnyshortjokes.py  hf1.py  hf10.py  hf11.py  hf12.py  hf13.py  hf2.py  hf3.py  hf4.py  hf5.py  hf6.py  hf7.py  hf8.py  hf9.py  laughfactory.py
src/: requirements.txt
src/scraper/: main.py
src/scraper/base/: __init__.py  main.py
src/scraper/core/: funnyshortjokes.py  hf1.py  hf10.py  hf11.py  hf12.py  hf13.py  hf2.py  hf3.py  hf4.py  hf5.py  hf6.py  hf7.py  hf8.py  hf9.py  laughfactory.py
src/scraper/format/: __init__.py
src/utils/: __init__.py
tests/test_scraper/: test_scraper.py
utils/: __init__.py
