[tool.poetry]
name = "depbot"
version = "0.1.0"
description = ""
authors = ["dewasahu2003 <dewasahu2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "1.34.74"
beautifulsoup4 = "4.12.3"
pandas = "2.2.1"
click = "8.1.7"
requests = "2.31.0"
datasets = "2.19.0"
argparse = "1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
