[tool.poetry]
name = "depbot"
version = "0.5.0"
description = ""
authors = ["dewasahu2003 <dewasahu2003@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
boto3 = "1.34.74"
beautifulsoup4 = "4.12.3"
pandas = "2.2.1"
requests = "2.31.0"
datasets = "2.19.0"
argparse = "1.4.0"
colorlog = "6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scraper = "depbot.scraper.main:main"
depbot = "depbot.main:main"

